@@ -1,6 +1,6 @@
 #!/usr/bin/env gosh
 ;; Communicate to kahua application server
-;; $Id: kahua.cgi.in,v 1.41 2006/09/01 06:20:49 bizenn Exp $
+;; $Id: kahua.cgi.in,v 1.42 2006/09/07 08:28:58 bizenn Exp $
 
 ;; This cgi script is kicked by httpd and pass through the request
 ;; to one of kahua servers.
@@ -132,8 +132,12 @@
 ;; note that we can only guess the protocol scheme.
 (define (server-uri)
   (let ((scheme (if (cgi-get-metavariable "HTTPS") "https" "http"))
-        (name   (or (cgi-get-metavariable "SERVER_NAME") "localhost"))
-        (port   (or (x->integer (cgi-get-metavariable "SERVER_PORT")) 80)))
+        (name   (or (and-let* ((v (cgi-get-metavariable "SERVER_NAME"))
+			       (m (#/^(.+?)(?:\:\d+)?$/ v)))
+		      (m 1))
+		    "localhost"))
+        (port   (cond ((cgi-get-metavariable "SERVER_PORT") => x->integer)
+		      (else 80))))
     (format "~a://~a~a"
             scheme name
             (if (or (and (string=? scheme "http")  (= port 80))
